Fix contents card display more-link style issues on mobile.

--- a/src/themes/pece_scholarly_lite/assets/sass/partials/nodes/card.sass
+++ b/src/themes/pece_scholarly_lite/assets/sass/partials/nodes/card.sass
@@ -69,7 +69,7 @@
     opacity: 0.8
 
   .more-link
-    float: right
+    display: block
 
   .field-name-field-pece-media-video
     position: relative
